force-app/main/default/objects/Account/fields/Flowbox__c.field-meta.xml
<CustomField>
    <fullName>Flowbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flowbox</label>
    <type>Checkbox</type>
</CustomField>