force-app/main/default/objects/Account/fields/Total_Amount_of_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Discount__c</fullName>
    <label>Total Amount of Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>