force-app/main/default/objects/Account/fields/UpdateField__c.field-meta.xml
<CustomField>
    <fullName>UpdateField__c</fullName>
    <label>UpdateField</label>
    <length>16</length>
    <type>Text</type>
</CustomField>