force-app/main/default/objects/Account/recordTypes/swimming_Instructor.recordType-meta.xml
<RecordType>
    <fullName>swimming_Instructor</fullName>
    <active>true</active>
    <description>this is for swimming instructor</description>
    <label>swimming Instructor</label>
</RecordType>