force-app/main/default/objects/Account/recordTypes/Swimming_Pool.recordType-meta.xml
<RecordType>
    <fullName>Swimming_Pool</fullName>
    <active>true</active>
    <label>Swimming Pool</label>
</RecordType>